[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "paperfetch"
version = "0.1.0"
description = "Fetch AI papers from arXiv and OpenReview"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["openreview-py"]

[project.scripts]
paperfetch = "cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["cli", "downloader", "models", "storage", "utils"]

[tool.setuptools.packages.find]
where = ["src"]
